Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98131

Invalid QMediaMetaData::VideoFrameRate

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.0 Alpha
    • 6.2.0
    • Multimedia
    • None
    • Windows 10, Visual Studio 2019
    • Windows
    • d9d8f41af6c31c57ccfedad3552fd53077e6ed89 (qt/qtmultimedia/dev)

    Description

      I get QMediaMetaData of a video loaded by QMediaPlayer (QMediaPlayer::metaData() method).

      Many values are correct (e.g. Duration, Resolution, VideoBitRate), but VideoFrameRate is invalid (i get an invalid QVariant).

      I tried with different video files and different formats, I always get invalid values.

      However, QMediaPlayer plays the video correcly, then I think the frame rate is readed right.

      Attachments

        For Gerrit Dashboard: QTBUG-98131
        # Subject Branch Project Status CR V

        Activity

          People

            anrocha André De La Rocha (Inactive)
            puffosauro Fabio Dago
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes