Windows: Enable support for QMediaMetaData::VideoFrameRate

QMediaMetaData::VideoFrameRate was disabled in the Windows backend,
together with other fields that are not currently supported, in spite
of it being a supported metadata field. This patch enables it.

Fixes: QTBUG-98131
Change-Id: I324f25c06476de57668b6242e60ec3081b21eca2
Reviewed-by: Lars Knoll <lars.knoll@qt.io>