src/multimedia/platform/windows/common/mfmetadata.cpp
@@ -240,8 +240,8 @@ QMediaMetaData MFMetaData::fromNative(IMFMediaSource* mediaSource)
                 mediaKey = QMediaMetaData::Resolution;
             } else if (key == PKEY_Video_Orientation) {
                 mediaKey = QMediaMetaData::Orientation;
-//            } else if (key == PKEY_Video_FrameRate) {
-//                mediaKey = QMediaMetaData::VideoFrameRate;
+            } else if (key == PKEY_Video_FrameRate) {
+                mediaKey = QMediaMetaData::VideoFrameRate;
             } else if (key == PKEY_Video_EncodingBitrate) {
                 mediaKey = QMediaMetaData::VideoBitRate;
             } else if (key == PKEY_Video_Compression) {
